--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
         <center>
         <br>
         <br>
-        <img src="css/uki.png" align="center" height="200" width="1200">
+        <img src="uki.png" align="center" height="200" width="1200">
         <br><br>
         <div id="flip">Welcome to Uki</div>
     </body>
